# ShuttleTutorial1

./: .gitignore  Cargo.toml  Secrets.toml.template  Shuttle.toml  build.rs  rustfmt.toml  schema.sql
src/: authorization.rs  bot.rs  error.rs  index.rs  lib.rs  managed_state.rs  state.rs  utils.rs
templates/: index.html.tera  redirect_index.html.tera
