[package]
name = "shuttle-tutorial"
version = "0.1.0"
edition = "2021"
publish = false
build = "build.rs"

[lib]

[build-dependencies]
toml = "0.5.9"
sqlx = { version = "*", features = ["runtime-tokio-native-tls", "mysql"] }
tokio = { version = "*", features = ["macros"] }

[dependencies]
shuttle-service = { version = "0.7.2", features = ["web-rocket"] }
shuttle-aws-rds = { version = "0.7.2", features = ["mariadb"] }
sqlx = { version = "0.6.2", features = ["runtime-tokio-native-tls", "mysql"] }
rocket = { version = "0.5.0-rc.2", features = ["secrets"] }
rocket_dyn_templates = { version = "0.1.0-rc.2", features = ["tera"] }
shuttle-secrets = "0.7.0"
url = "2.3.1"
reqwest = { version = "0.11.13", features = ["json"] }
rand = "0.8.5"
serenity = { version = "0.11", default-features = false, features = [
    "rustls_backend",
    "builder",
    "cache",
    "client",
    "gateway",
    "model",
    "http",
] }

# recommended by sqlx
[profile.dev.package.sqlx-macros]
opt-level = 3
